--- a/learnd3/layoutpie.html
+++ b/learnd3/layoutpie.html
@@ -3,74 +3,78 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/d3.min.js"></script>
-        <script src="http://d3js.org/d3.v3.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <style>
-            body{
-                padding:20px 100px;
-            }
-        </style>
-
-
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/d3.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <style>
+        body{
+            padding:20px 100px;
+        }
+    </style>
 
 
+</head>
+<body>
 
-        <script>
-            var data=[10,20,30,40];
 
-            var cxScale=d3.scale.linear()
-                    .domain([0,60])
-                    .range([0,1500]);
-            var axis=d3.svg.axis()
-                    .scale(cxScale);
-            var canvas=d3.select("body").append("svg")
+
+<script>
+    var data=[10,50,30];
+
+    var color=d3.scale.ordinal()
+            .range(["red","blue","orange"]);
+    var canvas=d3.select("body").append("svg")
                     .attr("width",1500)
                     .attr("height",800)
-                    ;
-
-            var circle=canvas.selectAll("circle")
-                    .data(data)
-                    .enter()
-                    .append("circle")
-                    .attr("cx",function(d){
-                        return cxScale(d);
-                    })
-                    .attr("cy",function(d){
-                        return cxScale(10);
-                    })
-                    .attr("r",function(d){
-                        return cxScale(d/10);
-                    })
-                    .attr("fill","blue");
-            canvas.append("g")
-                    .attr("transform","translate(0,700)")
-                    .call(axis);
+            ;
 
 
+    var group= canvas.append("g")
+            .attr("transform","translate(300,300)");
+    var r=200;
+    var a=Math.PI;
+    var arc=d3.svg.arc()
+            .innerRadius(0)
+            .outerRadius(r);
+
+    var pie=d3.layout.pie()
+            .value(function(d){
+                return d;
+            });
+
+    var arcs=group.selectAll(".arc")
+            .data(pie(data))
+            .enter()
+            .append("g")
+            .attr("class","arc");
+    arcs.append("path")
+            .attr("d",arc)
+            .attr("fill",function(d){
+                return color(d.data);
+            });
 
 
-            console.log(d3);
-        </script>
 
-   <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 
-    </body>
+</script>
+
+<script src="js/main.js"></script>
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+
+</body>
 </html>
