--- a/learnd3/layouttreemap.html
+++ b/learnd3/layouttreemap.html
@@ -34,7 +34,7 @@
 <script>
     var data = {
         name: "dbz",
-        value:10000,
+        value:1000,
         children: [
             {
                 name: "saiyan1",
@@ -68,21 +68,26 @@
                     {
                         name:"gohan",
                         value:100,
-                        children:{}
+                        children:[{
+                            name:"pan",
+                            value:100,
+                            children:{}
+                        }]
                     },
                     {
                         name:"goten",
                         value:100,
                         children:{}
-                    },
-                    {
-                        name:"pan",
-                        value:100,
-                        children:{}
-                    }]
+                    }
+                    ]
             },
             {
                 name:"raditz",
+                value:1000,
+                children:{}
+            },
+            {
+                name:"nappa",
                 value:1000,
                 children:{}
             }
